# python-confidence-coach

./: .gitignore  DEPLOYMENT.md  Makefile  docker-compose.yml  render.yaml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20240101_000000_initial_schema.py
backend/app/: main.py
backend/app/api/v1/routes/: auth.py  chat.py  conversations.py  dashboard.py  health.py
backend/app/api/v1/schemas/: auth.py  chat.py  dashboard.py
backend/app/core/: config.py  exceptions.py  logging.py  security.py
backend/app/db/: base.py  session.py
backend/app/db/models/: __init__.py  achievement.py  conversation.py  message.py  skill_score.py  user.py
backend/app/db/repositories/: __init__.py  achievement_repo.py  conversation_repo.py  message_repo.py  skill_repo.py  user_repo.py
backend/app/services/: chat_service.py  dashboard_service.py  gemini_client.py  mcp_client.py
frontend/: .env.example  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vercel.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: auth.ts  chat.ts  client.ts  dashboard.ts
frontend/src/components/: LeftNav.tsx  Mascot.tsx
frontend/src/components/chat/: ChatPanel.tsx  ConfidenceCheckCard.tsx  ConversationSidebar.tsx  MessageBubble.tsx  MessageInput.tsx  TypingIndicator.tsx
frontend/src/components/dashboard/: DashboardSidebar.tsx  LearningStreakWidget.tsx  MasteredConceptsWidget.tsx  NeedsReinforcementWidget.tsx  NextChallengeWidget.tsx  RecentAchievementsWidget.tsx  SkillScoreWidget.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/hooks/: useChat.ts  useConversations.ts  useDashboard.ts
frontend/src/pages/: CoachPage.tsx  HomePage.tsx  LoginPage.tsx  ProgressPage.tsx  RegisterPage.tsx  SettingsPage.tsx
frontend/src/types/: index.ts
mcp-server/: .env.example  Dockerfile  config.py  pyproject.toml  server.py
mcp-server/models/: schemas.py
mcp-server/prompts/: system.py  templates.py
mcp-server/tools/: assess.py  check.py  explain.py  skill.py
